--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,14 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  http: ^0.12.1
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.0+9
+  http: ^0.12.1
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.9+5
+  flutter_share: 1.0.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
