--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,15 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.4.0+9
+  firebase_ml_vision: ^0.6.0+2
   http: ^0.12.1
-  firebase_analytics: ^5.0.2
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+5
   flutter_share: 1.0.2+1
   url_launcher: ^5.4.7
   cached_network_image: 2.2.0+1
   google_fonts: ^0.3.5
+  camera: ^0.4.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
