--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cached_network_image: 2.2.0+1
   google_fonts: ^0.3.5
   camera: ^0.4.2
+  sqflite: 1.3.0+1
+  path: 1.6.4
 
 
   # The following adds the Cupertino Icons font to your application.
